--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'argentina'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy']\n",
     "next_up() # 'argentina'"
@@ -112,7 +123,18 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'finland'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['finland', 'canada', 'croatia']\n",
     "next_up() # 'finland'"
