--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,18 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'madagascar'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "favorite_destination() # 'madagascar'"
    ]
@@ -183,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "'croatia'"
+       "'madagascar'"
       ]
      },
      "execution_count": 8,
